[package]
authors = ["Frequency"]
description = "Substrate node for frequency"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "frequency-service"
repository = "https://github.com/LibertyDSNP/frequency/"
version = "0.0.0"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.5" }
derive_more = "0.99.17"
futures = "0.3.25"
hex = "0.4.3"
hex-literal = "0.3.4"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros", "time", "parking_lot"] }

# Frequency Runtime
frequency-runtime = { path = "../../runtime/frequency", optional = true }
common-runtime = { path = "../../runtime/common" }
cli-opt = { default-features = false, path = "../cli-opt" }
# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
# Frequency
common-helpers = { default-features = false, path = "../../common/helpers" }
common-primitives = { default-features = false, path = "../../common/primitives" }
pallet-messages-rpc = { path = "../../pallets/messages/src/rpc" }
pallet-messages-runtime-api = { path = "../../pallets/messages/src/runtime-api" }
pallet-msa-rpc = { path = "../../pallets/msa/src/rpc" }
pallet-msa-runtime-api = { path = "../../pallets/msa/src/runtime-api" }
pallet-schemas-rpc = { path = "../../pallets/schemas/src/rpc" }
pallet-schemas-runtime-api = { path = "../../pallets/schemas/src/runtime-api" }
pallet-stateful-storage-rpc = { path = "../../pallets/stateful-storage/src/rpc" }
pallet-stateful-storage-runtime-api = { path = "../../pallets/stateful-storage/src/runtime-api" }
pallet-handles-rpc = { path = "../../pallets/handles/src/rpc" }
pallet-handles-runtime-api = { path = "../../pallets/handles/src/runtime-api" }
system-runtime-api = { path = "../../runtime/system-runtime-api" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

[dev-dependencies]
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
scale-info = { version = "2.2.0", default-features = false, features = [
"derive",
] }

[features]
default = ["std"]
std = []
runtime-benchmarks = [
  "frequency-runtime/runtime-benchmarks",
  "polkadot-service/runtime-benchmarks",
]
frequency = ["frequency-runtime"]
frequency-no-relay = ["frequency-runtime"]
frequency-rococo-local = ["frequency-runtime"]
frequency-rococo-testnet = ["frequency-runtime"]
frequency-lint-check = [
  "frequency",
  "frequency-no-relay",
  "frequency-rococo-local",
  "frequency-rococo-testnet",
]
try-runtime = ["frequency-runtime/try-runtime", "polkadot-service/try-runtime"]
