[package]
authors = ["Frequency"]
description = "Substrate node for frequency"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "frequency-service"
repository = "https://github.com/frequency-chain/frequency/"
version = "1.17.0-rc4+polkadotstable2503"

[dependencies]
clap = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true }

derive_more = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, default-features = true }
hex-literal = { workspace = true }

jsonrpsee = { workspace = true, features = ["server"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "time", "parking_lot"] }
serde_json = { workspace = true }

# Frequency Runtime
frequency-runtime = { path = "../../runtime/frequency", optional = true }
common-runtime = { path = "../../runtime/common" }
cli-opt = { default-features = false, path = "../cli-opt" }
# Substrate
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-executor = { workspace = true }
sc-cli = { workspace = true }
sc-keystore = { workspace = true }

sc-service = { workspace = true }
sc-client-api = { workspace = true }

sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }

sc-sysinfo = { workspace = true }

sc-rpc = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-wasm-interface = { workspace = true }

substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }
# Frequency
common-helpers = { default-features = false, path = "../../common/helpers" }
common-primitives = { default-features = false, path = "../../common/primitives" }
pallet-messages-rpc = { path = "../../pallets/messages/src/rpc" }
pallet-messages-runtime-api = { path = "../../pallets/messages/src/runtime-api" }
pallet-msa-rpc = { path = "../../pallets/msa/src/rpc" }
pallet-msa-runtime-api = { path = "../../pallets/msa/src/runtime-api" }
pallet-schemas-rpc = { path = "../../pallets/schemas/src/rpc" }
pallet-schemas-runtime-api = { path = "../../pallets/schemas/src/runtime-api" }
pallet-stateful-storage-rpc = { path = "../../pallets/stateful-storage/src/rpc" }
pallet-stateful-storage-runtime-api = { path = "../../pallets/stateful-storage/src/runtime-api" }
pallet-handles-rpc = { path = "../../pallets/handles/src/rpc" }
pallet-handles-runtime-api = { path = "../../pallets/handles/src/runtime-api" }
pallet-frequency-tx-payment-rpc = { path = "../../pallets/frequency-tx-payment/src/rpc" }
pallet-frequency-tx-payment-runtime-api = { path = "../../pallets/frequency-tx-payment/src/runtime-api" }
system-runtime-api = { path = "../../runtime/system-runtime-api" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
sc-client-api = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = ["sp-api/std", "sp-core/std"]
runtime-benchmarks = [
  "frequency-runtime/runtime-benchmarks",
  "polkadot-service/runtime-benchmarks",
]
frequency = ["frequency-runtime"]
frequency-no-relay = ["frequency-runtime"]
frequency-local = ["frequency-runtime"]
frequency-testnet = ["frequency-runtime"]
frequency-lint-check = [
  "frequency",
  "frequency-no-relay",
  "frequency-local",
  "frequency-testnet",
]
try-runtime = ["frequency-runtime/try-runtime", "polkadot-service/try-runtime"]

[lints]
workspace = true
