[package]
authors = ["Frequency"]
description = "Pallet for Capacity"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-capacity"
publish = false
repository = "https://github.com/libertyDSNP/frequency/"
version = "1.7.1-rc2+polkadot0.9.42"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
]}
common-primitives = {default-features = false, path = "../../common/primitives"}
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.42"}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
scale-info = {version = "2.5.0", default-features = false, features = [
  "derive",
]}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}

[dev-dependencies]
common-runtime = {path = '../../runtime/common', default-features = false}
pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42"}
pallet-msa = {path = '../msa'}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "pallet-msa/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "common-primitives/std",
  "common-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
