[package]
authors = ["Frequency"]
description = "Pallet for Capacity"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-capacity"
publish = false
repository = "https://github.com/libertyDSNP/frequency/"
version = "1.9.0-rc3+polkadot1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
  "derive",
]}
common-primitives = {default-features = false, path = "../../common/primitives"}
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
frame-support = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
scale-info = {version = "2.10.0", default-features = false, features = [
  "derive",
]}
log = { version = "0.4.17", default-features = false }
sp-core = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[dev-dependencies]
common-runtime = {path = '../../runtime/common', default-features = false}
pallet-balances = {git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-msa = {path = '../msa'}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "pallet-msa/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "common-primitives/std",
  "common-runtime/std",
  "log/std",
  "sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
