[package]
authors = ["Frequency"]
description = "Pallet for Capacity"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-capacity"
publish = false
repository = "https://github.com/frequency-chain/frequency/"
version = "1.13.0-rc1+polkadot1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
common-primitives = { default-features = false, path = "../../common/primitives" }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true, default-features = false }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
common-runtime = { path = '../../runtime/common', default-features = false }
pallet-balances = { workspace = true }
pallet-msa = { path = '../msa' }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "common-runtime/runtime-benchmarks",
  "pallet-msa/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "common-primitives/std",
  "common-runtime/std",
  "log/std",
  "sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
