[package]
authors = ["KILT <info@kilt.io>"]
description = "Support types, traits, and functions for the KILT Decentralized Identity Provider (DIP) functionality."
edition = "2021"
homepage = "https://kilt.io/"
name = "dip-support"
# version = "1.11.0-dev"
version = "0.0.0"

[dependencies]
# Parity dependencies
parity-scale-codec = {version = "3.1.5", default-features = false }
scale-info = {version = "2.2.0", default-features = false, features = [
  "derive",
]}

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }


[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std"
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
]
