[package]
authors = ["Frequency"]
description = "Pallet for paying fees"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-frequency-tx-payment"
publish = false
repository = "https://github.com/frequency-chain/frequency/"
version = "1.15.0+polkadot1.13.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-capacity = { default-features = false, path = "../capacity" }
pallet-msa = { default-features = false, path = "../msa" }
pallet-transaction-payment = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }

# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }

[dev-dependencies]
common-runtime = { path = "../../runtime/common", default-features = false }
pallet-balances = { workspace = true }
pallet-utility = { workspace = true }

# Frequency related dev dependencies
pallet-msa = { path = '../msa' }


[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "common-runtime/runtime-benchmarks",
  "pallet-capacity/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "common-primitives/std",
  "common-runtime/std",
  "sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
test = []
