[package]
name = "pallet-graph"
authors = ["Frequency Team"]
description = "Graph operations"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
publish = false
repository = "https://github.com/libertyDSNP/frequency/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
]}
log = { version = "0.4.14", default-features = false }
scale-info = {version = "2.0.0", default-features = false, features = ["derive"]}

sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", optional = true}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}

# Frequency related dependencies
common-primitives = {default-features = false, path = "../../common/primitives"}


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

try-runtime = ["frame-support/try-runtime"]
