[package]
name = 'pallet-graph'
version = '0.1.0'
description = 'FRAME Graph Pallet'
authors = ['MRC Team']
license = "Apache-2.0"
publish = false
homepage = "https://unfinishedlabs.io/"
repository = "https://github.com/LibertyDSNP/mrc/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Substrate
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.28" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.28" }
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# Frequency related dependencies
common-primitives = {default-features = false, path = "../../common/primitives"}

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'sp-std/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ['frame-support/try-runtime']
