[package]
authors = ["Frequency"]
description = "Handles Pallet"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-handles"
version = "0.0.0"
publish = false
repository = "https://github.com/libertyDSNP/frequency/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive",] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive",] }
numtoa = "0.2.4"
# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, branch = "release-polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }
handles-utils = { default-features = false, path = "src/handles-utils"}
[dev-dependencies]
env_logger = "0.10.0"
pretty_assertions = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "common-primitives/runtime-benchmarks"
]
std = [
  'codec/std',
  'scale-info/std',
  'sp-std/std',
  'sp-core/std',
  'sp-io/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'common-primitives/std',
]
try-runtime = ['frame-support/try-runtime']
