[package]
authors = ["Frequency"]
description = "Handles Pallet"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-handles"
version = "1.15.2-rc2+polkadot1.13.0"
publish = false
repository = "https://github.com/frequency-chain/frequency/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
numtoa = { workspace = true }
# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }
handles-utils = { default-features = false, path = "src/handles-utils" }
common-runtime = { path = "../../runtime/common", default-features = false }

[dev-dependencies]
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sp-keystore = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "common-runtime/runtime-benchmarks",
]
std = [
  'parity-scale-codec/std',
  'scale-info/std',
  'sp-std/std',
  'sp-core/std',
  'sp-io/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'common-primitives/std',
  'common-runtime/std',
]
try-runtime = ['frame-support/try-runtime']
test = []